--- a/app/src/main/res/layout/activity_mapa.xml
+++ b/app/src/main/res/layout/activity_mapa.xml
@@ -1,37 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="horusgeo.br158.MapaActivity">
 
-    <include
-        layout="@layout/content_mapa"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        tools:layout_constraintTop_creator="1"
-
-        android:layout_marginTop="8dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <WebView
         android:id="@+id/webview"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" >
 
 
     </WebView>
@@ -40,165 +20,30 @@
         android:id="@+id/floatingReturn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_gravity="bottom|right"
         android:layout_marginBottom="16dp"
-
-        app:backgroundTint="?attr/colorPrimary"
+        android:layout_marginLeft="16dp"
+        app:backgroundTint="@color/colorPrimary"
         app:layout_anchor="@+id/webview"
         app:layout_anchorGravity="bottom|left"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_revert"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginLeft="16dp" />
+        app:srcCompat="@android:drawable/ic_menu_revert" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="top|right"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
         android:clickable="true"
         app:backgroundTint="@color/colorPrimary"
         app:layout_anchor="@+id/webview"
         app:layout_anchorGravity="top|right"
-        app:srcCompat="@android:drawable/ic_menu_mylocation"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="16dp" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingRegua"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:layout_anchor="@+id/webview"
-        app:layout_anchorGravity="bottom|right"
-        app:srcCompat="@mipmap/ic_straighten_white_24dp"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/floatingPin"
-        android:layout_marginEnd="16dp" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabReguaNew"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        app:backgroundTint="@android:color/black"
-        app:layout_anchor="@id/fabReguaNew"
-        app:layout_anchorGravity="bottom|right"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@mipmap/ic_done_white_24dp"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:visibility="invisible"
-        android:clickable="false"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabReguaCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="0dp"
-        android:clickable="false"
-        android:visibility="invisible"
-        app:backgroundTint="?attr/colorPrimary"
-        app:layout_anchor="@+id/webview"
-        app:layout_anchorGravity="bottom|right"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/fabReguaNew"
-        app:srcCompat="@mipmap/ic_clear_black_24dp"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintRight_creator="1" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingPin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:layout_anchor="@+id/webview"
-        app:layout_anchorGravity="bottom|right"
-        app:srcCompat="@android:drawable/ic_menu_myplaces"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/floatingDesenho"
-        android:layout_marginEnd="16dp" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingDesenho"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:layout_anchor="@+id/webview"
-        app:layout_anchorGravity="bottom|right"
-        app:srcCompat="@android:drawable/ic_menu_edit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="16dp" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabPointsCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="0dp"
-        android:clickable="false"
-        android:visibility="invisible"
-        app:backgroundTint="?attr/colorPrimary"
-        app:layout_anchor="@+id/webview"
-        app:layout_anchorGravity="bottom|right"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/fabReguaNew"
-        app:srcCompat="@mipmap/ic_clear_black_24dp"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintRight_creator="1" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabPointsOk"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:layout_anchor="@+id/webview"
-        app:layout_anchorGravity="bottom|right"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="16dp"
-        app:backgroundTint="@android:color/holo_green_dark"
-        android:visibility="invisible"
-
-        app:srcCompat="@mipmap/ic_done_white_24dp"
-
-        />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabPointsNew"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:clickable="false"
-        app:backgroundTint="@color/colorPrimary"
-        app:layout_anchor="@+id/webview"
-        app:srcCompat="@mipmap/ic_place_white_24dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-
-        android:visibility="invisible"/>
+        app:srcCompat="@android:drawable/ic_menu_mylocation" />
 
 
-</android.support.constraint.ConstraintLayout>
+
+
+</android.support.design.widget.CoordinatorLayout>
